--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  
+  "homepage":"http://AravindMurugan18.github.io/sample",
+
   "name": "portfolio",
   
   "version": "0.1.0",
@@ -49,7 +50,11 @@
   "test": "react-scripts test",
   
     
-  "eject": "react-scripts eject"
+  "eject": "react-scripts eject",
+
+  "predeploy":"npm rrun build",
+
+  "deploy":"gh-pages -d build"
   
   },
   
