--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     
   "eject": "react-scripts eject",
 
-  "predeploy":"npm rrun build",
+  "predeploy":"npm run build",
 
   "deploy":"gh-pages -d build"
   
