--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://AravindMurugan18.github.io/sam",
+
   "name": "portfolio",
   
   "version": "0.1.0",
@@ -10,9 +10,6 @@
   
     
   "@heroicons/react": "^2.1.3",
-  
-    
-  "@heroicons/vue": "^2.1.3",
   
     
   "@testing-library/jest-dom": "^5.17.0",
@@ -52,11 +49,8 @@
   "test": "react-scripts test",
   
     
-  "eject": "react-scripts eject",
+  "eject": "react-scripts eject"
 
-  "predeploy":"npm run build",
-
-  "deploy":"gh-page -d build"
   
   },
   
