--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"http://AravindMurugan18.github.io/sam",
 
   "name": "portfolio",
   
@@ -49,8 +50,11 @@
   "test": "react-scripts test",
   
     
-  "eject": "react-scripts eject"
+  "eject": "react-scripts eject",
 
+  "predeploy":"npm run build",
+
+  "deploy":"gh-pages -d build"
   
   },
   
